fixing img link broken

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="logos_bottom">
                     <div id="logo4">
-                        <img src="/img/logo4.png">
+                        <img src="img/logo4.png">
                     </div>
                     <div id="logo5">
                         <img src="img/logo5.png">
